--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: 8083
 spring:
   application:
     name: hmdp
@@ -11,7 +11,7 @@ spring:
   redis:
     host: 127.0.0.1
     port: 6379
-    password:
+    password: 123456
     lettuce:
       pool:
         max-active: 10
@@ -27,4 +27,3 @@ logging:
     com.hmdp: debug
   pattern:
     dateformat: mm:ss.SSS
-
